fixed resume section on small screens

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -125,9 +125,12 @@
         p {
             font-size: .8rem;
         }
+        .typeScript {
+            bottom: 2px
+        }
     }
     .resumeSummary {
-        height: 1400px;
+        height: 1200px;
     }
     .experienceContainer .resumeFlex {
         flex-direction: column;
@@ -143,7 +146,7 @@
         width: 400px;
     }
     .getInTouch {
-        height: 1100px;
+        height: 775px;
     }
     .infoCol p {
         font-size: .8rem;
@@ -162,6 +165,10 @@
         a, button {
             margin: 10px 5px 0px 5px
         }
+    }
+    .icons .card .typeScript {
+        bottom: 2px;
+        left: 10px;
     }
 }
 
@@ -237,10 +244,28 @@
     .textFlex h3 {
         font-size: .8rem;
     }
-    .icons .card  p{
-        font-size: .5rem;
+    .icons .card {
+        p {
+            font-size: .5rem;
+        }
+        .typeScript {
+            left: 0px; 
+        }
+        
     }
     .resumeSummary {
-        height: 1600px;
+        height: 1400px;
+    }
+    .secondCol {
+        position: relative;
+        top: 40px;
+    }
+    .educationFix {
+        position: relative;
+        bottom: 40px;    
+    }
+    .skillsFix {
+        position: relative;
+        bottom: 14px;
     }
 }
