--- a/styles/sass/partials/index/_techStack.scss
+++ b/styles/sass/partials/index/_techStack.scss
@@ -30,7 +30,7 @@
     flex-wrap: wrap;    
     box-shadow: 10px 0 0 $primary, 20px 0 0 rgb(248,249,250), 30px 0 0 $primary, 0 10px 0 $primary, 10px 10px 0 rgb(248,249,250), 20px 10px 0 $primary, 30px 10px 0 rgb(248,249,250), 0 20px 0 rgb(248,249,250), 10px 20px 0 $primary, 20px 20px 0 rgb(248,249,250), 30px 20px 0 $primary, 0 30px 0 $primary, 10px 30px 0 rgb(248,249,250), 20px 30px 0 $primary, 30px 30px 0 rgb(248,249,250), 5px 5px 15px 5px rgba(0,0,0,0);
     .card {
-        justify-content: space-between;
+        justify-content: center;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -50,6 +50,10 @@
             margin-top: 10px;
             font-weight: 400;
             
+        }
+        .typeScript {
+            position: relative;
+            bottom: 5px;
         }
     }
     
